css/style.css
*{
    box-sizing: border-box;
    padding: 0;
    margin: 0ß;
}


/* MAIN CLASSES */
a{
    text-decoration: none;
}
.border_radius_20{
    border-radius: 0.45rem;
}
.bg_dark_alpha{
    background-color: rgba(0, 0, 0, 0.3);
}

/* FONT AWESOME */
.fa-solid.fa-bell{
    color: #ff8f00;
}
/* NAVBAR */
#search_bar{
    content: "\f002";
}
.grow_nav{
    flex-basis: 80%;
}
.bg_search_bar{
    background-color: #e5e5e5;
}

nav form input::placeholder{
    font-size: 0.8rem;
    font-weight: 600;
}
header .form-control:focus {
    outline:0;
    box-shadow:0 0 0 0.1rem transparent;
  }
  


/* SIDEBAR */
#side-bar .container-fluid,
#side-bar .row{
    height: 100%;
}
.fa-solid.fa-signal{
    margin-left: -2px;
}

/* MAIN NAV BAR */
.main-nav{
    /* height: 150px; */
    background-color: #1b72e8;
    /* DEBUG */
/* background-color: violet; */
}
.origine .breadcrumb-item+.breadcrumb-item::before {
    content: "";
}

.breadcrumb-item:first-of-type + .breadcrumb-item::before {
    content: "\00BB";
    position: absolute;
    font-size: 30px;
    color: white;
    top: -13px;
    left: 0px;
    padding-right: 1rem;
  }  
li.breadcrumb-item:nth-child(2) {
    position: relative;
    height: 100%;
    padding-left: 20px;
  } 
  
  .plus_rounded {
    line-height: 10px;
    padding-bottom: 10px;
    vertical-align: bottom;
  }

  .plus_rounded i{
    font-size: 12px;
  }
/* #doubleright-pointing{
    font-size: 30px;
} */
/* MAIN CONTAINERS */
#wrapper{
    display: flex;
    height: calc(100vh - 100px );
    overflow-y: auto;
    /* DEBUG */
    background-color: red;
}
#side-bar{
    flex-basis: min-content;
    padding-right: 40px;
    height: 100vh;
    overflow-y: auto;
    /* DEBUG */
    background-color:#051e34;
}
.bg_side-bar{
    background-image: url(../img/sidebar-bg.png);
}
#main-content{
    flex-grow: 1;
    height: 100%;
    overflow: auto;
    /* DEBUG */
    background-color: green;

}

.offcanvas_width{
    width: 50%;
}
@media all and (max-width:991px){
    .offcanvas_width{
        width: 100%;
    }
    #side-bar{
        flex-basis: 70px;
        min-width: 70px;
        /* padding-right: 20px; */
    }
    #main-content {
        flex-grow: 0;
        flex-basis: calc(100% - 70px);
        min-width: calc(100% - 70px);
      }
}

@media all and (max-width:767px){
    .row.mt-2.flex-lg-row.flex-md-row.flex-column-reverse{
       gap: 20px;
    }
}

